statfulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myapp-statefulset
spec:
  serviceName: mydb-service
  replicas: 1 
  selector:
    matchLabels:
      app: app-database
  template:
    metadata:
      labels:
        app: app-database
    spec:
      containers:
      - name: dbapp-container
        image: rajubingi2664/phpapp:dbimage
        ports:
        - containerPort: 3306


        #secret integration
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"  


        #Volume Mount integration
        volumeMounts:
        - name: myapp-pvc
          mountPath: /usr/share/nginx/html/

  volumeClaimTemplates:
  - metadata:
      name: myapp-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]    
      resources:
        requests:
          storage: 2Gi
