db-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mydb-service
spec:
  ClusterIP: None
  selector:
    app: mysqldb
  ports:
    - port: 3306
      targetPort: 3306
